[gd_scene load_steps=12 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://pad.png" type="Texture" id=3]
[ext_resource path="res://dots.png" type="Texture" id=4]
[ext_resource path="res://collision.gd" type="Script" id=5]
[ext_resource path="res://wall.png" type="Texture" id=6]
[ext_resource path="res://ball.gd" type="Script" id=7]
[ext_resource path="res://ball.png" type="Texture" id=8]
[ext_resource path="res://scoreboard.gd" type="Script" id=9]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="player1" type="Node2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 16, 240 )
scale = Vector2( 4, 4 )
script = ExtResource( 2 )
_sections_unfolded = [ "Region", "Transform" ]
__meta__ = {
"_edit_group_": true
}
extents = Vector2( 8, 24 )
speed = 300

[node name="sprite" type="Sprite" parent="player1" index="0"]

texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 4, 12 )
_sections_unfolded = [ "Region" ]

[node name="anchor" type="Position2D" parent="player1" index="1"]

position = Vector2( -4, 0 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="player2" type="Node2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 624, 240 )
scale = Vector2( 4, 4 )
script = ExtResource( 2 )
_sections_unfolded = [ "Region", "Transform" ]
__meta__ = {
"_edit_group_": true
}
extents = Vector2( 8, 24 )
speed = 300

[node name="sprite" type="Sprite" parent="player2" index="0"]

texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 4, 12 )
_sections_unfolded = [ "Region" ]

[node name="anchor" type="Position2D" parent="player2" index="1"]

position = Vector2( 4, 0 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="divider" type="Sprite" parent="." index="2"]

position = Vector2( 320, 240 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 1, 120 )
region_filter_clip = true
_sections_unfolded = [ "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="top_wall" type="Node2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 320, 4 )
scale = Vector2( 4, 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
extents = Vector2( 320, 4 )

[node name="sprite" type="Sprite" parent="top_wall" index="0"]

texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 160, 2 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="bottom_wall" type="Node2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 320, 476 )
scale = Vector2( 4, 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
extents = Vector2( 320, 4 )

[node name="sprite" type="Sprite" parent="bottom_wall" index="0"]

texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 160, 2 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="ball" type="Node2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 320, 240 )
scale = Vector2( 4, 4 )
script = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
extents = Vector2( 6, 6 )

[node name="sprite" type="Sprite" parent="ball" index="0"]

texture = ExtResource( 8 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="timer" type="Timer" parent="ball" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="ui" type="Control" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 576.0
margin_bottom = 416.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="scoreboard" type="Control" parent="ui" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 9 )

[node name="player1" type="Label" parent="ui/scoreboard" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 24.0
margin_right = 304.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="player2" type="Label" parent="ui/scoreboard" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_top = 24.0
margin_right = 440.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]


